@@ -4,7 +4,8 @@
 #' designed to allow this function to be called without loading the entire 
 #' \pkg{SnowballC} package.  \link[SnowballC]{wordStem}  uses Martin Porter's 
 #' stemming algorithm and the C libstemmer library generated by Snowball.
-#' @param x a character vector or corpus, whose word stems are to be removed
+#' @param x a character vector or set of tokenized texts, whose word stems are to be removed.  If tokenized texts, 
+#' the tokenization must be word-based.
 #' @param language the name of a recognized language, as returned by 
 #'   \link[SnowballC]{getStemLanguages}, or a two- or three-letter ISO-639 code 
 #'   corresponding to one of these languages (see references for the list of 
@@ -47,8 +48,8 @@ wordstem.character <- function(x, language = "porter") {
 #' @import stringi 
 #' @export
 wordstem.tokenizedTexts <- function(x, language = "porter") {
-    if (any(unlist(lapply(x, stringi::stri_detect_fixed, " "))))
-        stop("whitespace detected: you can only stem tokenized texts")
+    if (!grepl("word", attr(x, "what")) || any(unlist(lapply(x, stringi::stri_detect_fixed, " "))))
+        stop("whitespace detected: you can only stem word-tokenized texts")
     if (all.equal(attributes(x)$ngrams, 1))
         result <- lapply(x, SnowballC::wordStem, language)
     else {
